# localsearch

./: .gitlab-ci.yml  COPYING  HACKING.md  Makefile.am  NEWS  README.md  check-style.py  config-miners.h.meson.in  config.h.meson.in  configure.ac  gitlog-to-changelog  localsearch.doap  meson.build  meson_options.txt  run-uninstalled.in  tracker-miners.doap
data/: default.rule  meson.build  org.freedesktop.Tracker.Extract.gschema.xml  org.freedesktop.Tracker.FTS.gschema.xml  org.freedesktop.Tracker.Miner.Files.gschema.xml  org.freedesktop.Tracker.Writeback.gschema.xml  org.freedesktop.domain.rule.in
docs/man1/: localsearch-3.1.txt  localsearch-extract.1.txt  localsearch-index.1.txt  localsearch-info.1.txt  localsearch-inhibit.1.txt  localsearch-search.1.txt  localsearch-status.1.txt  localsearch-tag.1.txt  localsearch-writeback-3.1.txt  localsearch.1.txt  meson.build
docs/manpages/: Makefile.am  localsearch-3.1.txt  localsearch-daemon.1.txt  localsearch-extract.1.txt  localsearch-index.1.txt  localsearch-info.1.txt  localsearch-reset.1.txt  localsearch-search.1.txt  localsearch-status.1.txt  localsearch-tag.1.txt  localsearch-writeback-3.1.txt  localsearch3-daemon.1.txt  localsearch3-extract.1.txt  localsearch3-index.1.txt  localsearch3-info.1.txt  localsearch3-reset.1.txt  localsearch3-search.1.txt  localsearch3-status.1.txt  localsearch3-tag.1.txt  meson.build  tracker-daemon.1  tracker-daemon.1.txt  tracker-extract.1  tracker-extract.1.txt  tracker-index.1.txt  tracker-miner-fs.1.txt  tracker-miner-rss.1.txt  tracker-reset.1.txt  tracker-search.1  tracker-search.1.txt  tracker-status.1.txt  tracker-tag.1  tracker-tag.1.txt  tracker-writeback.1.txt  tracker3-search.1.txt  tracker3-tag.1.txt
examples/python/: meson.build  query-async.py  query-sync.py
src/: Makefile.am  README.md  create-miner-symlinks.sh  meson.build
src/cli/: main.c  meson.build  sparql-queries.gresource.xml  tracker-cli-utils.c  tracker-cli-utils.h  tracker-daemon.c  tracker-dbus.c  tracker-extract.c  tracker-help.c  tracker-help.h  tracker-index.c  tracker-index.h  tracker-info.c  tracker-info.h  tracker-inhibit.c  tracker-inhibit.h  tracker-miner-manager.c  tracker-miner-manager.h  tracker-process.c  tracker-reset.c  tracker-search.c  tracker-search.h  tracker-status.c  tracker-tag.c  tracker-tag.h
src/common/: meson.build  tracker-common.h  tracker-dbus.c  tracker-debug.h  tracker-domain-ontology.h  tracker-enums.h  tracker-error-report.c  tracker-extract-info.c  tracker-extract-info.h  tracker-file-utils.c  tracker-file-utils.h  tracker-landlock.c  tracker-landlock.h  tracker-locale.h  tracker-miner-proxy.c  tracker-miner-proxy.h  tracker-miner.c  tracker-module-manager.c  tracker-module-manager.h  tracker-power-upower.c  tracker-power.h  tracker-seccomp.c  tracker-seccomp.h  tracker-systemd.c  tracker-systemd.h  tracker-type-utils.h  tracker-utils.c  tracker-utils.h
src/control/: meson.build  tracker-control.service.in  tracker-main.c
src/extractor/: 10-webp.rule  11-iso.rule  15-libmediainfo-guess.rule  90-libmediainfo-audio-generic.rule  90-libmediainfo-video-generic.rule  meson.build  tracker-cue-sheet.c  tracker-cue-sheet.h  tracker-decorator.c  tracker-decorator.h  tracker-extract-abw.c  tracker-extract-controller.c  tracker-extract-controller.h  tracker-extract-decorator.c  tracker-extract-decorator.h  tracker-extract-desktop.c  tracker-extract-disc-generic.c  tracker-extract-epub.c  tracker-extract-gif.c  tracker-extract-html.c  tracker-extract-icon.c  tracker-extract-iso.c  tracker-extract-jpeg.c  tracker-extract-libav.c  tracker-extract-mediainfo.cpp  tracker-extract-mp3.c  tracker-extract-msoffice-xml.c  tracker-extract-msoffice.c  tracker-extract-oasis.c  tracker-extract-pdf.c  tracker-extract-persistence.c  tracker-extract-persistence.h  tracker-extract-playlist.c  tracker-extract-png.c  tracker-extract-ps.c  tracker-extract-raw.c  tracker-extract-text.c  tracker-extract-tiff.c  tracker-extract-webp.c  tracker-extract-xps.c  (+11 more)
src/indexer/: meson.build  org.freedesktop.Tracker3.Miner.Files.gresource.xml  org.freedesktop.Tracker3.Miner.Files.service.in  org.freedesktop.Tracker3.Miner.Files.xml  tracker-application.c  tracker-application.h  tracker-config.c  tracker-config.h  tracker-controller.c  tracker-controller.h  tracker-endpoint-helper.c  tracker-extract-watchdog.c  tracker-extract-watchdog.h  tracker-file-notifier.c  tracker-file-notifier.h  tracker-files-interface.h  tracker-indexer-methods.c  tracker-indexer-methods.h  tracker-indexer.c  tracker-indexer.h  tracker-indexing-tree-methods.c  tracker-indexing-tree-methods.h  tracker-indexing-tree.c  tracker-indexing-tree.h  tracker-lru.c  tracker-lru.h  tracker-main.c  tracker-miner-enums.h  tracker-miner-files-methods.c  tracker-miner-files-methods.h  tracker-miner-files.c  tracker-miner-files.h  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner-fs.service.in  tracker-monitor-fanotify.c  tracker-monitor-fanotify.h  tracker-monitor-glib.c  tracker-monitor-glib.h  tracker-monitor.c  (+6 more)
src/libtracker-common/: Makefile.am  meson.build  tracker-common.h
src/libtracker-extract/: Makefile.am  meson.build  tracker-data.h  tracker-exif.c  tracker-extract-info.c  tracker-extract-info.h  tracker-extract.h  tracker-guarantee.c  tracker-module-manager.c  tracker-module-manager.h  tracker-resource-helpers.c  tracker-resource-helpers.h  tracker-utils.c  tracker-xmp.c
src/libtracker-miner/: meson.build  org.freedesktop.Tracker3.Miner.xml  tracker-crawler.c  tracker-crawler.h  tracker-data-provider.c  tracker-decorator-fs.c  tracker-decorator.c  tracker-decorator.h  tracker-file-data-provider.c  tracker-file-notifier.c  tracker-file-notifier.h  tracker-file-system.c  tracker-indexing-tree.c  tracker-lru.c  tracker-miner-enum-types.c.template  tracker-miner-enum-types.h.template  tracker-miner-enums.h  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner-object.c  tracker-miner-object.h  tracker-miner-online.c  tracker-miner-proxy.c  tracker-miner.h  (+11 more)
tests/: Makefile.am  meson.build  test-bus.conf.in  test-system-bus.conf
(+798 files in other folders)
